--- a/index.html
+++ b/index.html
@@ -20,10 +20,15 @@
                 <li>Building a basic Website on GitHub</li>
             </ul></p>
         <li><a href="day002.html">Day 2</a></li>
-        <p>The Basics of HTML, Pt.2:
+        <p>The Basics of HTML, Pt.2 + The Basics of CSS Pt.1:</p>
             <ul>
                 <li>Recap on git commit and how to update a Repository</li>
                 <li>The Odin Project: Recipes site</li>
+                <li>Adding Styles with to HTML with CSS</li>
+                <ul>
+                    <li>Common Selectors</li>
+                    <li>CSS Properties</li>
+                </ul>
                  
             </ul>
         </p>
