--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
                 <li>Building a basic Website on GitHub</li>
             </ul></p>
         <li><a href="day002.html">Day 2</a></li>
-        <p>The Basics of HTML, Pt.2 + The Basics of CSS Pt.1:</p>
+        <p>The Basics of HTML, Pt.2 + The Basics of CSS Pt.1:
             <ul>
                 <li>Recap on git commit and how to update a Repository</li>
                 <li>The Odin Project: Recipes site</li>
@@ -29,7 +29,14 @@
                     <li>Common Selectors</li>
                     <li>CSS Properties</li>
                 </ul>
-                 
+            </ul></p>  
+        <li><a href="day003.html">Day 3</a></li>               
+        <p>The Basics of CSS Pt.2:</p>
+            <ul>
+                <li>Adding CSS to HTML</li>
+                
+                </ul>
             </ul>
         </p>
+
 </html>
