--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 
 <head>
     <meta charset="utf-8">
+    <link rel="stylesheet" href="style.css">
     <title>My Coding Journey</title>
 </head>
 <body> 
-    <h1> Here is to a New Beginning.</h1>
+    <h1>My Coding Journey:</h1>
     <p>This page will be updated daily throughout the journey.</p>
-    <h2>My Coding Journey: </h2>
     <ul>
         <li><a href="day001.html">Day 1</a></li>
          <p>The Basics of HTML, Pt.1:
@@ -34,9 +34,26 @@
         <p>The Basics of CSS Pt.2:</p>
             <ul>
                 <li>Adding CSS to HTML</li>
-                
+                <li>Fundamentals of CSS</li>
+                <li>Working with <em>style.css</em></li>             
                 </ul>
+            </p>
+        <li><a href="day004.html">Day 4</a></li>
+        <ul>
+            <li>DevTools</li>
+            <ul>
+                <li>Overview</li>
+                <li>Opening DevTools</li>
+                <li>View and Change CSS</li>
+                <li>Getting Started Viewing and Changing The DOM</li>
             </ul>
-        </p>
+            </ul>
+        <li><a href="day005.html">Day 5</a></li>
+        <p>CSS Positioning + Layout</p>
+        <ul>
+            <li>The Box Model</li>
+            <li>Margin/Padding/Borders</li>
+        </ul>
+        </ul>
 
 </html>
