correct an error about a selector

--- a/day002.html
+++ b/day002.html
@@ -38,7 +38,7 @@
                 <p>* { </p>
                     <p> color: purple; </p>
                         <p> } </p>
-                            <p>All <font color="purple">*</font>s would be colored purple (Note. all '|' signify an enter/line down)</p>  
+                            <p>All fonts on the page would appear purple.</p>  
             </ul>
             <li>Type Selectors (or Element Selectors)</li>
             <ul>
