Minor update to contents, Add simplified box to css file

--- a/index.html
+++ b/index.html
@@ -31,29 +31,33 @@
                 </ul>
             </ul></p>  
         <li><a href="day003.html">Day 3</a></li>               
-        <p>The Basics of CSS Pt.2:</p>
+        <p>The Basics of CSS, Pt.2:
             <ul>
                 <li>Adding CSS to HTML</li>
                 <li>Fundamentals of CSS</li>
                 <li>Working with <em>style.css</em></li>             
-                </ul>
-            </p>
+                </ul></p>
         <li><a href="day004.html">Day 4</a></li>
-        <ul>
-            <li>DevTools</li>
+            <p>DevTools:
             <ul>
                 <li>Overview</li>
                 <li>Opening DevTools</li>
                 <li>View and Change CSS</li>
                 <li>Getting Started Viewing and Changing The DOM</li>
-            </ul>
-            </ul>
+                </ul></p>        
         <li><a href="day005.html">Day 5</a></li>
-        <p>CSS Positioning + Layout</p>
+        <p>CSS Positioning + Layout, Pt.1:
         <ul>
             <li>The Box Model</li>
             <li>Margin/Padding/Borders</li>
-        </ul>
+        </ul> </p>
+        <li><a href="day006.html">Day 6</a></li>
+        <p>CSS Positioning + Layout, Pt.2:
+        <ul>
+            <li>Different Display Types</li>
+            <li>Alternative CSS Box Model</li>
+            <li>Margin/Padding/Borders in Depth</li>
+        </ul></p>
         </ul>
 
 </html>
