--- a/day005.html
+++ b/day005.html
@@ -26,6 +26,7 @@
         <li><special-text>Padding</special-text>: Increases space between edge of a box and the contents inside</li>
         <li><special-text>Margin</special-text>: Increases space between the box and anything that is sitting next to it</li>
         <li><special-text>Border</special-text>: Adds space between the padding and margin</li>
+        <li><strong>(Bonus)</strong> <special-text>Content</special-text>: Uses the properites <em>height</em> and <em>width</em> to adjust the area where the content is displayed</li>
     </ul>
     
 
