fix list/box specificity

--- a/day006.html
+++ b/day006.html
@@ -4,8 +4,7 @@
     <meta charset="UTF-8">
     <link rel="stylesheet" href="style.css">
     <style>
-        li,
-        ul {
+        .listspecial {
             border: 35px solid lightpink;
             padding: 5px;
             display: flex;
@@ -49,11 +48,11 @@
     <h3>Tuesday June 14th 2022 <br> Day Six</h3>
     <h2>Different Display Types</h2>
     <p>Let's play with <special-text>flex</special-text> display types using a list with '<em>style</em>' in our '<em>head</em>' tags (would appear more appealing with a <em>transparent</em> border);</p>
-    <ul>
-        <li>This will be space one</li>
-        <li>This will be space two</li>
-        <li>This will be space three</li>
-        <li>This will be space four</li>
+    <ul class="listspecial">
+        <li class="listspecial">This will be space one</li>
+        <li class="listspecial">This will be space two</li>
+        <li class="listspecial">This will be space three</li>
+        <li class="listspecial">This will be space four</li>
     </ul>
 
     <p>And now for a <special-text>block</special-text> display within a sentence <span class="block">right here</span> using '<em>span</em>' tags.</p>
