--- a/day006.html
+++ b/day006.html
@@ -38,6 +38,14 @@
             box-sizing: border-box;
             border: 2px solid lightcoral;
         }
+
+        .flexlist {
+            display: inline-flex;
+            list-style: none;
+            padding: 2px;
+            border: 2px solid transparent;
+            align-items: center;
+        }
     </style>
     <title>My Coding Journey: Day 6</title>
 </head>
