Fix minor list conflict in Borders

--- a/day006.html
+++ b/day006.html
@@ -61,6 +61,10 @@
         <li class="listspecial">This will be space two</li>
         <li class="listspecial">This will be space three</li>
         <li class="listspecial">This will be space four</li>
+        <li class="listspecial">This will be space five</li>
+        <li class="listspecial">This will be space six</li>
+        <li class="listspecial">This will be space seven</li>
+        <li class="listspecial">Enough examples?</li>
     </ul>
 
     <p>And now for a <special-text>block</special-text> display within a sentence <span class="block">right here</span> using '<em>span</em>' tags.</p>
