Add/Complete Day 7

--- a/day006.html
+++ b/day006.html
@@ -30,8 +30,8 @@
             border: .5em solid blanchedalmond;
         }
 
-        span {
-            border: 2px solid lightpink
+        .spanbox {
+            border: 2px solid lightpink;
         }
 
         .basicbox {
@@ -53,9 +53,9 @@
 <body>
     <h1>More CSS Positioning and Layout</h1> 
     <hr>
-    <h3>Tuesday June 14th 2022 <br> Day Six</h3>
+    <h3>Tuesday June 14th, 2022 <br> Day Six</h3>
     <h2>Different Display Types</h2>
-    <p>Let's play with <special-text>flex</special-text> display types using a list with '<em>style</em>' in our '<em>head</em>' tags (would appear more appealing with a <em>transparent</em> border);</p>
+    <p>Let's play with <span class="special-text">flex</span> display types using a list with '<em>style</em>' in our '<em>head</em>' tags (would appear more appealing with a <em>transparent</em> border);</p>
     <ul class="listspecial">
         <li class="listspecial">This will be space one</li>
         <li class="listspecial">This will be space two</li>
@@ -67,12 +67,12 @@
         <li class="listspecial">Enough examples?</li>
     </ul>
 
-    <p>And now for a <special-text>block</special-text> display within a sentence <span class="block">right here</span> using '<em>span</em>' tags.</p>
+    <p>And now for a <span class="special-text">block</span> display within a sentence <span class="block">right here</span> using '<em>span</em>' tags with a block display element.</p>
     <br> <br>
-    <p>Now let's use some <special-text>inline</special-text> elements</p>
+    <p>Now let's use some <span class="special-text">inline</span> elements</p>
     <p class="inline">This paragraph will be inline with the next</p>
     <p class="inline">This is the next paragraph</p>
-    <p>We can also add words on the same line using the <span>span element</span>. (This is done by wrapping the desired text in '<em>span</em>' tags)</p>
+    <p>We can also add words on the same line using the <span class="spanbox">span element</span>. (This is done by wrapping the desired text in '<em>span</em>' tags)</p>
     <ul class="inlineflex">
         <li class="inlineflex">You can also inline using lists</li>
         <li class="inlineflex">With multiple items</li>
@@ -113,6 +113,9 @@
     <p>Lastly, padding, which works the same way as margins:
     <em><br><br>padding-top<br>padding-right<br>padding-bottom<br>padding-left</em></p>
     <p> We'll play around with these much more in the future</p>
+
+    <h2>CSS Tricks with Margins</h2>
+    <p></p>
 
 
 
