--- a/index.html
+++ b/index.html
@@ -58,6 +58,13 @@
             <li>Alternative CSS Box Model</li>
             <li>Margin/Padding/Borders in Depth</li>
         </ul></p>
+        <li><a href="day007.html">Day 7</a></li>
+        <p>CSS Positioning and Layout Continued
+            <ul>
+                <li>CSS: Block and Inline</li>
+                <li>CSS: Divs and Spans</li>
+            </ul>
+        </p>
         </ul>
 
 </html>
