--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>My Coding Journey</title>
 </head>
 <body> 
-    <h1>My Coding Journey:</h1>
+    <h1>My Coding Journey:</h1><hr>
     <p>This page will be updated daily throughout the journey.</p>
     <ul>
         <li><a href="day001.html">Day 1</a></li>
@@ -63,8 +63,16 @@
             <ul>
                 <li>CSS: Block and Inline</li>
                 <li>CSS: Divs and Spans</li>
-            </ul>
-        </p>
+            </ul> </p>
+        <li><a href="day008.html">Day 8</a></li>
+        <p>Flexbox</p>
+        <ul>
+            <li>Introduction to Flexbox</li>
+            <li>Flex Containers and Flex Items</li>
+            <li>Growing and Shrinking</li>
+            <li>Axes</li>
+        </ul>
+       
         </ul>
 
 </html>
