Tweak style and index

--- a/index.html
+++ b/index.html
@@ -7,9 +7,8 @@
     <title>My Coding Journey</title>
 </head>
 <body> 
-    <h1>My Coding Journey:</h1><hr>
-    <p>This page will be updated daily throughout the journey.</p>
-    
+    <h1>My Coding Journey</h1>
+
     <div class="index-container">
          <div class="index-item">
              <ul>
