Add Day 10 and update index/style accordingly

--- a/index.html
+++ b/index.html
@@ -113,6 +113,21 @@
                 <li>Gap</li>       
             </ul></p>
             </ul></div>
+
+        <div class="index-item">
+            <ul>
+        <li><a href="day010.html">Day 10</a></li>
+        <p>Flexbox Continues
+            <ul>
+                <li>The Axes of Flexbox</li>
+                <li>Start and End Lines</li>
+                <li>Flex Container</li>
+                <li>Multi-line Flex</li>
+                <li>Shorthand + Predefined Values</li>
+                <li>Alignment/Jusitification/Distribution (between items)</li>
+            </ul></p>
+            </ul>
+            </div>
         </div>
 </body>
 </html>
