--- a/index.html
+++ b/index.html
@@ -126,8 +126,20 @@
                 <li>Shorthand + Predefined Values</li>
                 <li>Alignment/Jusitification/Distribution (between items)</li>
             </ul></p>
+            </ul></div>
+
+        <div class="index-item">
+            <ul>
+        <li><a href="day011.html">Day 11</a></li>
+        <p>Foundations of JavaScript</p>
+            <ul>
+                <li>How to Run JavaScript Code</li>
+                <li>Variables</li>
+                <li>Variable Naming</li> 
+                <li>Constants</li>
+        </ul>
             </ul>
-            </div>
+        </div>
         </div>
 </body>
 </html>
