--- a/index.html
+++ b/index.html
@@ -131,14 +131,27 @@
         <div class="index-item">
             <ul>
         <li><a href="day011.html">Day 11</a></li>
-        <p>Foundations of JavaScript</p>
+        <p>Foundations of JavaScript
             <ul>
                 <li>How to Run JavaScript Code</li>
                 <li>Variables</li>
                 <li>Variable Naming</li> 
                 <li>Constants</li>
-        </ul>
+            </ul></p>
+            </ul></div>
+
+        <div class="index-item">
+            <ul>
+        <li><a href="day012.html">Day 12</a></li>
+        <p>Foundations of JavaScript Continued
+            <ul>
+                <li>Arithmetic Operators</li>
+                <li>Numbers</li>
+                
             </ul>
+
+            </ul>
+        </div>
         </div>
         </div>
 </body>
