--- a/day011.html
+++ b/day011.html
@@ -16,7 +16,7 @@
         <br>Anyway, onto JavaScript!</span></p>
 
     <h2>How to Run JavaScript Code</h2>
-    <p>The simplest way to run JavaScript is within the browser, we'll simple create an HTML file with the JavaScript code inside of it. Just add <span class="special-text">[style]</span> tags within the head of the code, within write <span class="special-text">[console.log("Hello, World!")]</span>
+    <p>The simplest way to run JavaScript is within the browser, we'll simply create an HTML file with the JavaScript code inside of it. Just add <span class="special-text">[style]</span> tags within the head of the code, within write <span class="special-text">[console.log("Hello, World!")]</span>
     <br> Anything placed within the ( ) will print to the developer console in the browser.</p>
     <p>To include JavaScript within an external script, it is similar to linking external CSS (as I have been doing thus far). Add <span class="special-text"> [script src="javascropt.js"]  [/script] </span>. The .js extension works like .css for stylesheets</p> 
 
