add/complete day 13

--- a/index.html
+++ b/index.html
@@ -146,13 +146,26 @@
         <p>Foundations of JavaScript Continued
             <ul>
                 <li>Arithmetic Operators</li>
-                <li>Numbers</li>
-                
-            </ul>
+                <li>Numbers</li>  
+                <li>Helpful Operators/Methods</li>              
+            </ul></p>
+            </ul></div>
 
-            </ul>
-        </div>
-        </div>
-        </div>
+        <div class="index-item">
+            <ul>
+        <li><a href="day013.html">Day 13</a></li>
+        <p>Foundations of JavaScript Continues
+            <ul>
+                <li>Inrement and Decrement Operators</li>
+                <li>Assigned Operators</li>
+                <li>Sizing a Canvas Box</li>
+                <li>Comparisonm Operators</li>
+            </ul></p>
+            </ul></div>
+
+        <div class="index-item"
+            
+        </div></div>
+        </div></div>
 </body>
 </html>
